# project-2-group-2

./: .gitignore  README.md  default.env  docker-compose.yml  package-lock.json  pyproject.toml
backend/: .gitignore  Dockerfile  alembic.ini  food_review_form.py  main.py  pyproject.toml
backend/app/: database.py  models.py  serde.py  utils.py
backend/app/models/: __init__.py  comment.py  post.py  user.py
backend/app/nutrislice/: api.py  populate_food.py
backend/app/routes/: __init__.py  account_routes.py  auth_routes.py  comments_routes.py  global_routes.py  helpers.py  items_routes.py  nutrislice_routes.py  places_routes.py  posts_routes.py  vote_routes.py
backend/app/schemas/: __init__.py  change_password_form.py  create_food_item_form.py  create_food_place_form.py  register_form.py  review_form.py  user_roles.py  vote_request.py
backend/data_fetch_testing/: test_fetch.py
backend/migrations/: env.py
backend/migrations/versions/: 1bab4bb32f4d_merged_heads.py  255188568530_place_review_support.py  2f94d3309b8b_.py  48b664b0699d_.py  4b7a9f0d2e11_add_post_votes_reports_and_timestamps.py  539f014d1f29_stars_start_from_1_not_0.py  5b1ab093c32e_removed_reviews_for_places.py  5b7defc0c06f_image_url_fields.py  7de44378dfc5_added_comments_reviews_food_items.py  9c3c4e5d2a11_track_food_item_menu_dates.py  c12010f95f0d_user_table_now_uses_the_enum.py  c2e716c341d0_add_missing_created_at_to_reviews.py  c65cdfd5dc5c_user_table.py  dde38b8dcf6b_add_posts_and_comments_tables.py  ed53d36ae13e_indexed_user_roles_to_allow_fast_admin_.py  (+2 more)
frontend/: Dockerfile  (+3 more)
(+48 files in other folders)
